- SerialDependencyResolver: #moduleProcessed() throws IllegalArgumentException if the module is not null and no module is being processed (was: IllegalStateException).
- An empty string is considered a defined callTargetForModules/moduleProperty value.

Other:
- API documentation is expanded.
- CallTargetForModules (in the parallel mode) interrupts helper threads and waits for them to finish if the build thread is interrupted to ensure that the build finishes rapidly and the 'build failed' message is the last message displayed.
- CallTargetForModules#setModuleProperty() overrides properties defined by #createParam().
- CallTargetForModules#addConfigured(ModuleLoader) throws NullPointerException if null module loader is passed.
- ModuleUtil#normalisePath(String, File) is added to support ModuleLoader#normalisePath(String).

0.4.0
-----
Bug fixes:
- GetModuleAttribute, GetModuleClasspath, GetModulePath: if an output property is defined then it is not replaced with the value generated by the task.
- CallTargetForModules: a single param is created to set the module to call the target for.
- ManifestModuleLoader reads classpath attributes and dependencies as URLs, not URIs.
- ManifestModuleLoader: a usage of Ant 1.7-specific API is replaced with Ant 1.6-compatible functionality.
- ManifestModuleLoader: ModuleNotLoadedException is thrown instead of a RuntimeException if a malformed URL element is present in a module manifest.
- GetModuleClasspath supports now nested <sourceAttribute> elements.

API changes:
- Module and ModuleInfo are made final classes.
- Module is made thread-safe for the clients.
- Module#addDependency and Module#setDependencies visibility is reduced from 'public' to 'package'.
- CallTargetForModules: the attribute 'threadCount' is added to define a number of threads which are to execute targets for independent modules.
- CallTargetForModules: the API of the element 'param' is limited to the API of the Property type of Ant 1.6.